--- a/java/res/values-ca/strings.xml
+++ b/java/res/values-ca/strings.xml
@@ -28,10 +28,10 @@
     <string name="popup_on_keypress" msgid="123894815723512944">"Amplia en prémer tecles"</string>
     <string name="settings_screen_preferences" msgid="2696713156722014624">"Preferències"</string>
     <string name="settings_screen_accounts" msgid="2786418968536696670">"Comptes i privadesa"</string>
-    <string name="settings_screen_appearance" msgid="7358046399111611615">"Aparença i disseny"</string>
+    <string name="settings_screen_appearance" msgid="7358046399111611615">"Aparença i disposició"</string>
     <string name="settings_screen_gesture" msgid="8826372746901183556">"Escriptura gestual"</string>
     <string name="settings_screen_correction" msgid="1616818407747682955">"Correcció de textos"</string>
-    <string name="settings_screen_advanced" msgid="7472408607625972994">"Avançada"</string>
+    <string name="settings_screen_advanced" msgid="7472408607625972994">"Configuració avançada"</string>
     <string name="settings_screen_theme" msgid="2137262503543943871">"Tema"</string>
     <string name="enable_split_keyboard" msgid="4177264923999493614">"Activa el teclat partit"</string>
     <string name="cloud_sync_title" msgid="8579271074443847055">"Sincronitz. del Teclat de Google"</string>
@@ -129,7 +129,7 @@
     <string name="remove" msgid="4486081658752944606">"Elimina"</string>
     <string name="save" msgid="7646738597196767214">"Desa"</string>
     <string name="subtype_locale" msgid="8576443440738143764">"Idioma"</string>
-    <string name="keyboard_layout_set" msgid="4309233698194565609">"Disseny"</string>
+    <string name="keyboard_layout_set" msgid="4309233698194565609">"Disposició"</string>
     <string name="custom_input_style_note_message" msgid="8826731320846363423">"El teu estil d\'introducció personalitzat ha d\'estar activat per poder fer-lo servir. Vols activar-lo ara?"</string>
     <string name="enable" msgid="5031294444630523247">"Activa"</string>
     <string name="not_now" msgid="6172462888202790482">"Ara no"</string>
