--- a/java/res/values-hi/strings.xml
+++ b/java/res/values-hi/strings.xml
@@ -25,7 +25,7 @@
     <string name="use_contacts_for_spellchecking_option_summary" msgid="8754413382543307713">"स्पेलिंग जाँचने वाली सेवा आपकी संपर्क सूची के संपर्कों इस्तेमाल करता है"</string>
     <string name="vibrate_on_keypress" msgid="5258079494276955460">"बटन दबाने पर कंपन (वाइब्रेशन) करे"</string>
     <string name="sound_on_keypress" msgid="6093592297198243644">"बटन दबाने पर आवाज़"</string>
-    <string name="popup_on_keypress" msgid="123894815723512944">"कुंजी दबाने पर पॉपअप दिखाएं"</string>
+    <string name="popup_on_keypress" msgid="123894815723512944">"बटन दबाने पर पॉपअप दिखाएं"</string>
     <string name="settings_screen_preferences" msgid="2696713156722014624">"प्राथमिकताएं"</string>
     <string name="settings_screen_accounts" msgid="2786418968536696670">"खाते और निजता"</string>
     <string name="settings_screen_appearance" msgid="7358046399111611615">"दिखावट और सज्जा"</string>
@@ -40,7 +40,7 @@
     <string name="sync_now_title" msgid="3088838136743277721">"अभी समन्वयन करें"</string>
     <string name="clear_sync_data_title" msgid="8582001557037069154">"क्‍लाउड डेटा मिटाएं"</string>
     <string name="clear_sync_data_summary" msgid="993477139012576584">"Google से आपका समन्वयित डेटा हटाता है"</string>
-    <string name="clear_sync_data_confirmation" msgid="2811931135574727678">"आपका समन्‍वयित डेटा क्‍लाउड से हटा दिया जाएगा. आप सुनिश्‍चित हैं?"</string>
+    <string name="clear_sync_data_confirmation" msgid="2811931135574727678">"आपका समन्‍वयित डेटा क्‍लाउड से हटा दिया जाएगा. इसके बारे में पक्का हैं?"</string>
     <string name="clear_sync_data_ok" msgid="613104067705915132">"मिटाएं"</string>
     <string name="cloud_sync_cancel" msgid="5877481252150919037">"रद्द करें"</string>
     <string name="cloud_sync_opt_in_text" msgid="9176039655776298248">"आपकी निजी डिक्शनरी को Google सर्वर से सिंक किया जाएगा और उसका बैक अप लिया जाएगा. हमारे उत्पादों को बेहतर बनाने में मदद करने के लिए हो सकता है कि इस बात के आंकड़े इकट्ठा किये जाएं कि एक शब्द को कितनी बार दोहराया गया है. सभी जानकारी को इकट्ठा करना और उसका इस्तेमाल करना "<a href="https://www.google.com/policies/privacy">"Google की निजता नीति"</a>" के अनुपालन में होगा."</string>
@@ -61,7 +61,7 @@
     <string name="enable_metrics_logging" msgid="5506372337118822837">"<xliff:g id="APPLICATION_NAME">%s</xliff:g> को बेहतर बनाएं"</string>
     <string name="use_double_space_period" msgid="8781529969425082860">"दोहरे स्पेस वाला पीरियड"</string>
     <string name="use_double_space_period_summary" msgid="6532892187247952799">"स्पेसबार पर डबल टैप करने से पीरियड शामिल हो जाता है जिसके बाद एक रिक्ति होती है"</string>
-    <string name="auto_cap" msgid="1719746674854628252">"स्‍वत: अक्षर बड़े करना"</string>
+    <string name="auto_cap" msgid="1719746674854628252">"अपने-आप अक्षर बड़े करना"</string>
     <string name="auto_cap_summary" msgid="7934452761022946874">"प्रत्येक वाक्य के पहले शब्द को बड़ा लिखें"</string>
     <string name="edit_personal_dictionary" msgid="3996910038952940420">"निजी शब्दकोश"</string>
     <string name="configure_dictionaries_title" msgid="4238652338556902049">"एड-ऑन शब्दकोश"</string>
@@ -70,7 +70,7 @@
     <string name="prefs_show_suggestions_summary" msgid="1583132279498502825">"लिखते समय सुझाए गए शब्‍द दिखाएं"</string>
     <string name="prefs_block_potentially_offensive_title" msgid="5078480071057408934">"आपत्तिजनक शब्द रोकें"</string>
     <string name="prefs_block_potentially_offensive_summary" msgid="2371835479734991364">"संभावित आपत्तिजनक शब्दों का सुझाव न दें"</string>
-    <string name="auto_correction" msgid="7630720885194996950">"स्‍वत: सुधार"</string>
+    <string name="auto_correction" msgid="7630720885194996950">"अपने-आप सुधार"</string>
     <string name="auto_correction_summary" msgid="5625751551134658006">"Spacebar और विराम चिह्न गलत लिखे गए शब्‍दों को स्‍वचालित रूप से ठीक करते हैं"</string>
     <string name="auto_correction_threshold_mode_off" msgid="8470882665417944026">"बंद"</string>
     <string name="auto_correction_threshold_mode_modest" msgid="8788366690620799097">"साधारण"</string>
@@ -136,7 +136,7 @@
     <string name="custom_input_style_already_exists" msgid="8008728952215449707">"ऐसी ही इनपुट शैली पहले से मौजूद है: <xliff:g id="INPUT_STYLE_NAME">%s</xliff:g>"</string>
     <string name="prefs_keypress_vibration_duration_settings" msgid="7918341459947439226">"बटन दबाने पर कंपन (वाइब्रेशन) का समय"</string>
     <string name="prefs_keypress_sound_volume_settings" msgid="6027007337036891623">"बटन दबाने पर आवाज़ का स्तर"</string>
-    <string name="prefs_key_longpress_timeout_settings" msgid="6102240298932897873">"बटन दबाए रखने की समयाविधि"</string>
+    <string name="prefs_key_longpress_timeout_settings" msgid="6102240298932897873">"देर तक बटन दबाए रखने का समय"</string>
     <string name="prefs_enable_emoji_alt_physical_key" msgid="5963640002335470112">"कीबोर्ड के लिए स्माइलीज़"</string>
     <string name="prefs_enable_emoji_alt_physical_key_summary" msgid="5259484820941627827">"भौतिक Alt कुंजी इमोजी पैलेट दिखाती है"</string>
     <string name="button_default" msgid="3988017840431881491">"सामान्य"</string>
@@ -155,11 +155,11 @@
     <string name="setup_step3_title" msgid="3154757183631490281">"बधाई हो, आप बिल्कुल तैयार हैं!"</string>
     <string name="setup_step3_instruction" msgid="8025981829605426000">"अब आप <xliff:g id="APPLICATION_NAME">%s</xliff:g> के साथ अपने सभी पसंदीदा ऐप्स  में लिख सकते हैं."</string>
     <string name="setup_step3_action" msgid="600879797256942259">"अतिरिक्त भाषाएं कॉन्फ़िगर करें"</string>
-    <string name="setup_finish_action" msgid="276559243409465389">"समाप्त"</string>
+    <string name="setup_finish_action" msgid="276559243409465389">"खत्म"</string>
     <string name="show_setup_wizard_icon" msgid="5008028590593710830">"ऐप्लिकेशन का आइकॉन दिखाएं"</string>
     <string name="show_setup_wizard_icon_summary" msgid="4119998322536880213">"लॉन्चर में ऐप आइकॉन दिखाएं"</string>
-    <string name="app_name" msgid="6320102637491234792">"डिक्‍शनरी प्रदाता"</string>
-    <string name="dictionary_provider_name" msgid="3027315045397363079">"डिक्‍शनरी प्रदाता"</string>
+    <string name="app_name" msgid="6320102637491234792">"डिक्‍शनरी प्रोवाइडर"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"डिक्‍शनरी प्रोवाइडर"</string>
     <string name="dictionary_service_name" msgid="6237472350693511448">"डिक्‍शनरी सेवा"</string>
     <string name="download_description" msgid="6014835283119198591">"डिक्शनरी में बदलाव की जानकारी"</string>
     <string name="dictionary_settings_title" msgid="8091417676045693313">"अन्य शब्दकोष"</string>
@@ -206,7 +206,7 @@
     <string name="user_dict_settings_context_menu_delete_title" msgid="8142932447689461181">"मिटाएं"</string>
     <string name="user_dict_settings_empty_text" msgid="6889278304342592383">"आपके पास उपयोगकर्ता डिक्शनरी में कोई भी शब्द नहीं है. कोई शब्द जोड़ने के लिए, जोड़ें (+) बटन छूएं."</string>
     <string name="user_dict_settings_all_languages" msgid="8276126583216298886">"सभी भाषाओं के लिए"</string>
-    <string name="user_dict_settings_more_languages" msgid="7131268499685180461">"अधिक भाषाएं…"</string>
+    <string name="user_dict_settings_more_languages" msgid="7131268499685180461">"ज़्यादा भाषाएं…"</string>
     <string name="user_dict_settings_delete" msgid="110413335187193859">"मिटाएं"</string>
     <string name="user_dict_fast_scroll_alphabet" msgid="5431919401558285473">" ABCDEFGHIJKLMNOPQRSTUVWXYZ"</string>
 </resources>
