--- a/voiceinput-shared/src/main/res/values/strings.xml
+++ b/voiceinput-shared/src/main/res/values/strings.xml
@@ -6,10 +6,19 @@
     <string name="listening">Listening…</string>
     <string name="grant_microphone_permission_to_use_voice_input">Grant microphone permission to use Voice Input</string>
     <string name="open_voice_input_settings">Open Voice Input Settings</string>
+
     <string name="extracting_features">Extracting features…</string>
-    <string name="running_encoder">Running encoder…</string>
-    <string name="decoding_started">Decoding started…</string>
-    <string name="switching_to_english_model">Switching to English model…</string>
+    <string name="loading_model">Loading model…</string>
+    <string name="encoding">Running encoder…</string>
+    <string name="decoding">Decoding started…</string>
+    <string name="switching_model">Switching language…</string>
     <string name="processing">Processing…</string>
     <string name="initializing">Initializing…</string>
+
+    <string name="tiny_en_name">English-39 (default)</string>
+    <string name="base_en_name">English-74 (slower, more accurate)</string>
+
+    <string name="tiny_name">Multilingual-39 (less accurate)</string>
+    <string name="base_name">Multilingual-74 (default)</string>
+    <string name="small_name">Multilingual-244 (slow)</string>
 </resources>
